# Soroban-ZK-Std

./: Cargo.toml  README.md  Run EmbarkStudios cargo.txt  deny.toml  dyces.fun  feed.rss
contracts/shielded-asset-template/: Cargo.toml
contracts/shielded-asset-template/src/: lib.rs
contracts/verifier-sample/: Cargo.toml
contracts/verifier-sample/src/: lib.rs  test.rs
crates/zk-core/src/: lib.rs
crates/zk-soroban/: Cargo.toml
crates/zk-soroban/src/: lib.rs  poseidon2.rs
docs/: ASP_Integration.md
