[workspace]
resolver = "2"
members = [
    "crates/*",
    "contracts/*",
]

[workspace.package]
license = "Apache-2.0"

[workspace.dependencies]
soroban-sdk = "25.3.0" # Standard for 2026 Protocol 25
ethnum = { version = "1.5.3", default-features = false }
zk-core = { path = "./crates/zk-core" }
zk-soroban = { path = "./crates/zk-soroban" }

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true
