[package]
name = "verifier-sample"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]  # cdylib for WASM, rlib so tests can link against it

[dependencies]
soroban-sdk = { workspace = true }
zk-soroban = { workspace = true }
# zk-soroban = { path = "../../crates/zk-soroban" }

[dev-dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }
