[package]
name = "zk-soroban"
version = "0.1.0"
edition = "2021"
license.workspace = true

[lib]
crate-type = ["lib"]

[dependencies]
soroban-sdk = { workspace = true, features = ["hazmat-crypto"] }
ethnum = {workspace = true}
zk-core = { workspace = true }

[dev-dependencies]
soroban-sdk = { workspace = true, features = ["testutils", "hazmat-crypto"] }
